Add a Dash of Ajax 148p

--- a/app/assets/stylesheets/store.scss
+++ b/app/assets/stylesheets/store.scss
@@ -16,9 +16,9 @@ h1 {
   min-height: 100px;
   img {
     width: 80px;
-    margin-right: 5px;
-    margin-bottom: 5px;
-    position: absolute;
+    margin: 5px 10px 5px 10px;
+    position: relative;
+    float:left;
   }
   h3 {
     font-size: 120%;
