--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -40,6 +40,15 @@ body, body > p, body > ol, body > ul, body > td {margin: 8px !important} #banner
 #notice:empty {
   display: none
 }
+div#columns {
+  display: inline-block;
+  width: 250px;
+  float: left;
+}
+div#main {
+  display: inline-block;
+  width: 80%;
+}
 #columns {
   background: #141;
   display: flex;
@@ -47,10 +56,30 @@ body, body > p, body > ol, body > ul, body > td {margin: 8px !important} #banner
     padding: 1em;
     background: white;
     flex: 1;
+
   }
   #side {
     padding: 1em 2em;
     background: #141;
+
+    
+    form, div {
+      display: inline;
+    }
+    input {
+      font-size: small;
+    }
+    #cart {
+      font-size: smaller;
+      color:
+      white;
+      table {
+        border-top:
+        1px dotted #595;
+        border-bottom: 1px dotted #595;
+        margin-bottom: 10px;
+      }
+    }
     ul {
       padding: 0;
       li {
