--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -71,8 +71,7 @@ div#main {
     }
     #cart {
       font-size: smaller;
-      color:
-      white;
+      color: white;
       table {
         border-top:
         1px dotted #595;
